plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'com.diffplug.spotless' version '8.8.0'
}

group 'exportTableDefinition'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.mybatis:mybatis:3.5.16'
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation("com.oracle.database.jdbc:ojdbc8:19.18.0.0")
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.24.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.0'
    implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
    implementation 'org.yaml:snakeyaml:2.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.3'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'

}

test {
    useJUnitPlatform()
}

// PropertyLoaderはconfディレクトリをファイルシステムパスとして直接参照するため、
// テスト専用のプロパティファイルもsrc/main/resources/conf配下に置いているが、
// ビルド成果物（jar・配布用confディレクトリ）には含めない
processResources {
    exclude('conf/PropertyLoaderTestFixture.properties')
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.export_table_definition.ExportTableDefinition'
        )
    }
	exclude('/conf/mybatis.properties')
}

tasks.named('build').configure {
    dependsOn(tasks.named('shadowJar'))
}

shadowJar {
    archiveClassifier.set('') // 実行可能JARを作成（デフォルトの「-all」サフィックスを削除）
}

task copyResources(type: Copy) {
    from 'src/main/resources/conf'
    into "$buildDir/../build/libs/conf"
    exclude('PropertyLoaderTestFixture.properties')
}

javadoc {
    options.charSet = 'UTF-8'
    options.encoding = 'UTF-8'
    destinationDir = file("docs/javadoc")
}

build.dependsOn(copyResources)

spotless {
    java {
        googleJavaFormat('1.27.0')
        // static importを第1グループ、それ以外をASCII辞書順の1グループとする
        importOrder('\\#', '')
        removeUnusedImports()
    }
}
